packages/typ/tests/fixtures/diagnostics/0961_mli_unary_type_overapplied_01.mli.expected
File "0961_mli_unary_type_overapplied_01.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 0961_mli_unary_type_overapplied_01 is not a valid module name.

File "0961_mli_unary_type_overapplied_01.mli", line 2, characters 14-36:
2 | val x_alpha : (int, bool) wrap_alpha
                  ^^^^^^^^^^^^^^^^^^^^^^
Error: The type constructor wrap_alpha expects 1 argument(s),
       but is here applied to 2 argument(s)
